# Modulo_3

./: __init__.py.patch  __main__.py.patch  operaciones.py.patch  pyproject.toml
src/calculadora/: __main__.py  config.py  settings.py
src/calculadora/data/: initmsg.txt
src/calculadora/operaciones/: Exponent.py  MulDiv.py  SumRes.py
src/calculadora/utils/: utils.py
tests/integration/: test_integracion.py
tests/unit/: test_divide.py  test_exponente.py  test_fraccion.py  test_multiplica.py  test_resta.py  test_suma.py
