[tool.poetry]
name = "calculadora"
authors=["Copernico Contreras"]
version = "0.1.0"
description = "Calculadora de operacion basica"
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
dynaconf = "^3.1.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
pythonpath = [
  "src"
]

packages = [
    { include = "calculadora" }
]